Refactor Path resolution method for file storage
Replaced `Paths.get` with `Path.of` for resolving file paths to ensure consistency and to make use of the newer API. The change simplifies the code and maintains security checks intact.